@@ -4,7 +4,7 @@ global $arrLangModule;
 "List Calls"     => "List Calls",
 "Queue"          => "Queue",
 "Successful"     => "Successful",
-"Left"           => "Abandonated",
+"Left"           => "Abandoned",
 "Time Hopes"     => "Hold Time",
 "Find"           => "Find",
 "Date Init"      => "Date Init",
