@@ -1,3 +1,4 @@
+* Reports: fix incorrect translations in reports
 * Dialer: fix breakage due to introduction of 'goto' as reserved word in PHP 5.4
 * Agent Console: fix bug in which a chronometer counter that starts from 0, as
   signaled in an event might be mistakenly interpreted as an order to stop the
